--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React App</title>
+  <title>网络管理后台</title>
 </head>
 <body>
-<div id="root"></div>
+  <div id="root"></div>
 </body>
 </html>
